--- a/app/src/main/res/drawable/button_bg.xml
+++ b/app/src/main/res/drawable/button_bg.xml
@@ -2,5 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="24dp" />
-    <stroke android:width="3px" android:color="#000000" />
+    <stroke
+        android:width="3px"
+        android:color="#000000" />
 </shape>
