--- a/app/src/main/res/layout/ex_list_grp.xml
+++ b/app/src/main/res/layout/ex_list_grp.xml
@@ -11,7 +11,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:textSize="17sp"
-        android:textColor="@android:color/black"/>
+        android:textColor="@android:color/black"
+        android:textSize="17sp" />
 
 </LinearLayout>
