--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     tools:context=".view.LoginFragment">
 
@@ -13,29 +13,29 @@
         android:layout_margin="20dp"
         android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/startFragment_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/navismart_icon"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"/>
+        <ImageView
+            android:id="@+id/startFragment_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="40dp"
+            android:src="@drawable/navismart_icon" />
 
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp">
-
-        <EditText
-            android:id="@+id/startFragment_emailEditText"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:baselineAligned="false"
-            android:hint="@string/email_id"
-            android:inputType="textEmailAddress"
-            android:theme="@style/BaseLineTheme"/>
-    </android.support.design.widget.TextInputLayout>
+            android:layout_marginTop="50dp">
+
+            <EditText
+                android:id="@+id/startFragment_emailEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:baselineAligned="false"
+                android:hint="@string/email_id"
+                android:inputType="textEmailAddress"
+                android:theme="@style/BaseLineTheme" />
+        </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -50,121 +50,124 @@
                 android:baselineAligned="false"
                 android:hint="@string/password"
                 android:inputType="textPassword"
-                android:theme="@style/BaseLineTheme"/>
+                android:theme="@style/BaseLineTheme" />
         </android.support.design.widget.TextInputLayout>
 
-    <Button
-        android:id="@+id/startFragment_signInButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/sign_in_with_email"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/colorPrimary"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_gravity="center_horizontal"/>
+        <Button
+            android:id="@+id/startFragment_signInButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="16dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="@string/sign_in_with_email"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textColor="@color/white" />
 
-    <RelativeLayout
-        android:id="@+id/or_break_line"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_gravity="center_horizontal">
-        <View
-            android:id="@+id/v1"
-            android:layout_alignParentStart="true"
-            android:layout_width="30dp"
-            android:layout_height="2dp"
-            android:background="@color/colorPrimaryDark"
-            android:layout_margin="3dp"
-            android:layout_centerVertical="true"/>
-        <TextView
-            android:id="@+id/v2"
+        <RelativeLayout
+            android:id="@+id/or_break_line"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/v1"
-            android:text="@string/or"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="15sp"
-            android:layout_centerVertical="true"/>
-        <View
-            android:id="@+id/v3"
-            android:layout_toEndOf="@+id/v2"
-            android:layout_width="30dp"
-            android:layout_height="2dp"
-            android:background="@color/colorPrimaryDark"
-            android:layout_margin="3dp"
-            android:layout_centerVertical="true"/>
-    </RelativeLayout>
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp">
 
-    <Button
-        android:id="@+id/startFragment_createAccountButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/create_acct"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/colorPrimary"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_gravity="center_horizontal" />
+            <View
+                android:id="@+id/v1"
+                android:layout_width="30dp"
+                android:layout_height="2dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_margin="3dp"
+                android:background="@color/colorPrimaryDark" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="15dp">
-        <TextView
-            android:id="@+id/terms_cond"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/v2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/v1"
+                android:text="@string/or"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="15sp" />
+
+            <View
+                android:id="@+id/v3"
+                android:layout_width="30dp"
+                android:layout_height="2dp"
+                android:layout_centerVertical="true"
+                android:layout_margin="3dp"
+                android:layout_toEndOf="@+id/v2"
+                android:background="@color/colorPrimaryDark" />
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/startFragment_createAccountButton"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/agreeing_with"
-            android:textSize="10sp"
-            android:textColor="@color/colorAccent"
-            android:textAlignment="center"
-            />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="@string/create_acct"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textColor="@color/white" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center">
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="15dp"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/terms_cond_2"
+                android:id="@+id/terms_cond"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/TnC"
-                android:textSize="12sp"
-                android:textColor="@color/colorAccent"
+                android:text="@string/agreeing_with"
                 android:textAlignment="center"
-                />
-            <TextView
-                android:id="@+id/and_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/and"
-                android:textSize="10sp"
                 android:textColor="@color/colorAccent"
-                android:textAlignment="center"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                />
-            <TextView
-                android:id="@+id/privacy_statement"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/PrivacyStatement"
-                android:textSize="12sp"
-                android:textColor="@color/colorAccent"
-                android:textAlignment="center"
-                />
+                android:textSize="10sp" />
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/terms_cond_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/TnC"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/and_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:text="@string/and"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/privacy_statement"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/PrivacyStatement"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
 
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
