--- a/app/src/main/res/layout/fragment_marina_page.xml
+++ b/app/src/main/res/layout/fragment_marina_page.xml
@@ -195,8 +195,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
                     android:layout_marginStart="20dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="10dp"
                     android:text="@string/lorem_ipsum" />
@@ -223,8 +223,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
                     android:layout_marginTop="8dp"
+                    android:layout_marginEnd="20dp"
                     android:text="@string/lorem_ipsum" />
 
                 <View
@@ -292,8 +292,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="8dp"
-                    android:text="@string/lorem_ipsum"
-                    android:layout_marginEnd="20dp"/>
+                    android:layout_marginEnd="20dp"
+                    android:text="@string/lorem_ipsum" />
 
                 <View
                     android:layout_width="match_parent"
