--- a/app/src/main/res/layout/fragment_boater_profile.xml
+++ b/app/src/main/res/layout/fragment_boater_profile.xml
@@ -19,14 +19,31 @@
             android:background="@color/colorPrimary"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/logout_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="end"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:layout_marginEnd="10dp"
-                android:src="@drawable/ic_logout_white_24dp" />
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/edit_profile_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:src="@drawable/ic_edit_white_24dp" />
+
+                <ImageView
+                    android:id="@+id/logout_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="10dp"
+                    android:src="@drawable/ic_logout_white_24dp" />
+
+            </RelativeLayout>
+
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/boater_profile_image"
