--- a/app/src/main/res/layout/chat_brick.xml
+++ b/app/src/main/res/layout/chat_brick.xml
@@ -7,21 +7,11 @@
     android:layout_margin="8dp">
 
     <LinearLayout
+        android:id="@+id/chat_brick_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/chat_brick_card"
         android:background="@drawable/rounded_rectangle_green"
         android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/msg_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="2dp"
-            android:text="@string/name"
-            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -29,15 +19,15 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/msg_text"
+                android:id="@+id/msg_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="2dp"
-                android:text="@string/type_a_message"
-                android:textColor="@android:color/black" />
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="2dp"
+                android:layout_weight="1"
+                android:text="@string/name"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/msg_date_time"
@@ -45,11 +35,23 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:text="@string/date"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@android:color/darker_gray"
-                android:textSize="12sp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
-
+                android:textSize="12sp" />
         </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/msg_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/type_a_message"
+            android:textColor="@android:color/black" />
+
 
     </LinearLayout>
 
