--- a/app/src/main/res/layout/marina_msg_brick.xml
+++ b/app/src/main/res/layout/marina_msg_brick.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/marina_msg_box"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/initial_text_view"
@@ -11,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:background="@drawable/circle"
+        android:textAlignment="center"
         android:textColor="@color/white" />
 
     <TextView
