--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -69,6 +69,13 @@
         <action
             android:id="@+id/action_landingFragment_to_boaterSearchFragment"
             app:destination="@id/boaterSearchFragment" />
+        <action
+            android:id="@+id/action_landingFragment_to_chatFragment"
+            app:destination="@id/chatFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/boaterProfileFragment"
