--- a/app/src/main/res/layout/marina_msg_brick.xml
+++ b/app/src/main/res/layout/marina_msg_brick.xml
@@ -4,15 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:orientation="horizontal">
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="16dp">
 
     <TextView
         android:id="@+id/initial_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:background="@drawable/circle"
         android:textAlignment="center"
+        android:textSize="20sp"
+        android:gravity="center"
         android:textColor="@color/white" />
 
     <TextView
@@ -22,7 +29,10 @@
         android:layout_gravity="center"
         android:layout_weight="1"
         android:text="@string/name"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"/>
 
     <ImageView
         android:id="@+id/new_message_maker"
@@ -32,4 +42,10 @@
         android:layout_margin="8dp"
         android:src="@drawable/small_green_circle" />
 
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#ededed" />
 </LinearLayout>
